Compare id( )'s of listobjA, listobjB and listobjC

--- a/pandas_101.ipynb
+++ b/pandas_101.ipynb
@@ -136,6 +136,53 @@
     "print(listobjC is listobjA)\n",
     "print(listobjC == listobjA)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[22, 33, 44]\n",
+      "1792930815424\n",
+      "[22, 33, 44]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now let's add a third integer, 44, to the end of the original list object \n",
+    "#! Don't run code/cell again as it will append another 44\n",
+    "\n",
+    "listobjA.append(44)\n",
+    "\n",
+    "print(listobjA)\n",
+    "print(id(listobjA)) # The id of the listobjA didn't change\n",
+    "print(listobjB)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[22, 33]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "listobjC\n",
+    "# listobjC didn't change because it is a separate object with its own ID."
+   ]
   }
  ],
  "metadata": {
