Check id( ) of each list element

--- a/pandas_101.ipynb
+++ b/pandas_101.ipynb
@@ -183,6 +183,60 @@
     "listobjC\n",
     "# listobjC didn't change because it is a separate object with its own ID."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Each element within a list object is an object as well. The list object listobjA is a container of objects which are the elements of the list. In our case the elements are integers with individual IDs. Let's check the object ID of each element within a list:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "140735183797336\n",
+      "140735183797688\n",
+      "140735183798040\n",
+      "140735183798040\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(id(listobjA[0]))\n",
+    "print(id(listobjA[1]))\n",
+    "print(id(listobjA[2]))\n",
+    "\n",
+    "'''Since listobjB is pointing to the same list object as listobjA, \n",
+    "the object ID of the last, third element, should be the same'''\n",
+    "print(id(listobjB[2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List elements are of type `integer`\n",
+    "# whereas the list itself is of type `list`\n",
+    "print(type(listobjA))\n",
+    "print(type(listobjA[2]))"
+   ]
   }
  ],
  "metadata": {
