Implement map( ) on listA

--- a/pandas_101.ipynb
+++ b/pandas_101.ipynb
@@ -237,6 +237,43 @@
     "print(type(listobjA))\n",
     "print(type(listobjA[2]))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# map( )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 9, 16, 25, 36]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# In the example below, we will square each element of a list using Python function map().\n",
+    "\n",
+    "def square_it(x):\n",
+    "    return x * x\n",
+    "\n",
+    "listA = [1, 2, 3, 4, 5, 6]\n",
+    "\n",
+    "list(map(square_it, listA))\n",
+    "\n",
+    "''' map() returns an iterator object. \n",
+    "In order to print out the values, we converted this iterator object to a list.'''"
+   ]
   }
  ],
  "metadata": {
