--- a/pandas_101.ipynb
+++ b/pandas_101.ipynb
@@ -274,6 +274,60 @@
     "''' map() returns an iterator object. \n",
     "In order to print out the values, we converted this iterator object to a list.'''"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# lambda\n",
+    "\n",
+    "Function `square_it()` is very short function and can be replaced with the [**`lambda` function**](https://docs.python.org/dev/howto/functional.html#small-functions-and-the-lambda-expression). It is an anonymous function which does not have a name and thus cannot be re-used elsewhere. It can be useful if, for example, we need to pass a simple one-line custom function to the other function. \n",
+    "\n",
+    "**NOTE:** The `lambda` function should only be used for applying very simple functions.\n",
+    "\n",
+    "We can re-write the code above using the lambda function as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 9, 16, 25, 36]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(map(lambda x: x * x, listA))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6, 8, 10, 12]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# another example of using the lambda function:\n",
+    "list(map(lambda x: x + x, listA))"
+   ]
   }
  ],
  "metadata": {
