--- a/pandas_101.ipynb
+++ b/pandas_101.ipynb
@@ -38,7 +38,8 @@
     "# The code within the function initialized attributes author and title of a new object. These are called instance attributes.\n",
     "\n",
     "print(type(bookA))\n",
-    "#  In Python, when you define classes or functions at the top level of a script (not within another class or function), they belong to the __main__ module.\n",
+    "'''\n",
+    "__main__.Book refers to the Book class defined in the main module of your Python script. In Python, when you define classes or functions at the top level of a script (not within another class or function), they belong to the __main__ module.'''\n",
     "\n",
     "print(bookA.author)\n",
     "print(bookA.title)\n",
@@ -327,6 +328,109 @@
    "source": [
     "# another example of using the lambda function:\n",
     "list(map(lambda x: x + x, listA))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# *args\n",
+    "\n",
+    "The __single-asterisk keyword (`*`)__ is used when we need to use a list of arguments of variable length.\n",
+    "\n",
+    "Here is an example of a function which will take a list of numbers and sum them up:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "276.9\n"
+     ]
+    }
+   ],
+   "source": [
+    "def my_sum(*args):\n",
+    "    a = 0\n",
+    "\n",
+    "    for num in args:\n",
+    "        a += num\n",
+    "\n",
+    "    print(a)\n",
+    "\n",
+    "my_sum(4, 6, 10)    \n",
+    "my_sum(3, 5.12, 45.78, 100, 123)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **kwargs\n",
+    "\n",
+    "The __double-asterisk keyword (`**`)__ is used when we pass keyword arguments which are in the form of a dictionary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a = 1\n",
+      "b = 2\n",
+      "a = 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def myfunc(**kwargs): \n",
+    "    for k,v in kwargs.items():\n",
+    "        print(\"%s = %s\" % (k, v))\n",
+    "\n",
+    "# Using the function with one parameter:\n",
+    "myfunc(a=1)        \n",
+    "\n",
+    "# Using 2 parameters\n",
+    "myfunc(b=2, a=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# my_function(*args, **kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "args = (1, 2, 3)\n",
+      "kwargs = {'a': 4, 'b': 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def catch_all(*args, **kwargs):\n",
+    "    print(\"args =\", args)\n",
+    "    print(\"kwargs =\", kwargs)\n",
+    "\n",
+    "catch_all(1, 2, 3, a=4, b=5)    "
    ]
   }
  ],
