Create a Series from a list

--- a/pandas_101.ipynb
+++ b/pandas_101.ipynb
@@ -71,7 +71,61 @@
     }
    ],
    "source": [
-    "serA.index"
+    "serA.index # inspect index"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a_given_pandas.values\n",
+    "\n",
+    "In pandas, when you create a Series with an index of strings, the dtype of the index is typically represented as 'object'. This is because pandas uses the NumPy library for underlying data structures, and NumPy does not have a specific data type for strings. Instead, it uses the generic 'object' data type to represent any arbitrary Python object, including strings.\n",
+    "\n",
+    "Even though the index values look like strings and are indeed strings in this case, pandas internally represents them as objects due to the limitations of NumPy's dtype system.\n",
+    "\n",
+    "Therefore, when you see dtype='object' in the output of print(serB.index), it indicates that the index data type is a generic Python object type, which is used to accommodate the string values of the index. This is a common representation for indexes with string values in pandas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Num1     45.0\n",
+      "Num2    123.0\n",
+      "Num3     67.0\n",
+      "Num4      1.0\n",
+      "Num5     14.0\n",
+      "Name: Numbers, dtype: float64\n",
+      "Index(['Num1', 'Num2', 'Num3', 'Num4', 'Num5'], dtype='object')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 45., 123.,  67.,   1.,  14.])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create a Series using the same list as above, but define the index, data type and Series name:\n",
+    "serB = pd.Series(list_ser,\n",
+    "                 index=['Num1', 'Num2', 'Num3', 'Num4', 'Num5'], # indices can be strings\n",
+    "                 dtype= 'float',\n",
+    "                 name= 'Numbers') \n",
+    "\n",
+    "print(serB)\n",
+    "print(serB.index)\n",
+    "serB.values"
    ]
   }
  ],
