Create a DataFrame using a list

--- a/pandas_101.ipynb
+++ b/pandas_101.ipynb
@@ -88,9 +88,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Creating series\n",
+    "\n",
+    "## Using a list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -111,7 +122,7 @@
        "array([ 45., 123.,  67.,   1.,  14.])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +136,258 @@
     "\n",
     "print(serB)\n",
     "print(serB.index)\n",
-    "serB.values"
+    "print(serB.values)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using a dictionary\n",
+    "\n",
+    "In the next example we will create a `Series` from a dictionary. We will use the top 5 Canadian provinces by population (retrieved from [Statistics Canada](https://www150.statcan.gc.ca/n1/pub/12-581-x/2018000/pop-eng.htm) web site, we used the 2017 column of data):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ON    14193384\n",
+       "QC     8394034\n",
+       "BC     4817160\n",
+       "AB     4286134\n",
+       "MB     1338109\n",
+       "Name: Top 5 provinces by population, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "population_dict = {'ON': 14193384, 'QC': 8394034, 'BC': 4817160, 'AB': 4286134, 'MB': 1338109}\n",
+    "\n",
+    "provinces_population = pd.Series(population_dict, name='Top 5 provinces by population')\n",
+    "\n",
+    "provinces_population # the dictionary keys become the indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14193384\n",
+      "ON    14193384\n",
+      "QC     8394034\n",
+      "Name: Top 5 provinces by population, dtype: int64\n",
+      "BC    4817160\n",
+      "AB    4286134\n",
+      "Name: Top 5 provinces by population, dtype: int64\n",
+      "BC    4817160\n",
+      "AB    4286134\n",
+      "MB    1338109\n",
+      "Name: Top 5 provinces by population, dtype: int64\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(provinces_population['ON']) # population of Ontario\n",
+    "\n",
+    "# Selecting only provinces with population greater than 5 million.\n",
+    "# This type of selection is called boolean indexing:\n",
+    "print(provinces_population[provinces_population > 5000000])\n",
+    "print(provinces_population[2:4])\n",
+    "print(provinces_population['BC':'MB'])\n",
+    "print('NS' in provinces_population) # i.e Nova Scotia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33028821\n",
+      "6605764.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(provinces_population.sum())\n",
+    "print(provinces_population.mean())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DataFrames\n",
+    "\n",
+    "A `DataFrame` can be created from a:\n",
+    "\n",
+    "- Dictionary of 1-D structures (`ndarray`s, `list`s, dictionaries, tuples or `Series`)\n",
+    "- List of 1-D structures\n",
+    "- 2-D NumPy `ndarray`\n",
+    "- `Series`\n",
+    "- Another `DataFrame`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using a 2-dimensional list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Height</th>\n",
+       "      <th>Weight</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8</td>\n",
+       "      <td>128.0</td>\n",
+       "      <td>27.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10</td>\n",
+       "      <td>138.9</td>\n",
+       "      <td>34.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>16</td>\n",
+       "      <td>157.3</td>\n",
+       "      <td>91.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6</td>\n",
+       "      <td>116.6</td>\n",
+       "      <td>21.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>14</td>\n",
+       "      <td>159.2</td>\n",
+       "      <td>54.4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Age  Height  Weight\n",
+       "0    8   128.0    27.5\n",
+       "1   10   138.9    34.5\n",
+       "2   16   157.3    91.1\n",
+       "3    6   116.6    21.4\n",
+       "4   14   159.2    54.4"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(data=[[8, 128, 27.5],\n",
+    "                        [10, 138.9, 34.5],\n",
+    "                        [16, 157.3, 91.1],\n",
+    "                        [6, 116.6, 21.4],\n",
+    "                        [14, 159.2, 54.4]],\n",
+    "                    columns= ['Age', 'Height', 'Weight'])\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RangeIndex(start=0, stop=5, step=1)\n",
+      "Index(['Age', 'Height', 'Weight'], dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.index)\n",
+    "print(df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 5 entries, 0 to 4\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   Age     5 non-null      int64  \n",
+      " 1   Height  5 non-null      float64\n",
+      " 2   Weight  5 non-null      float64\n",
+      "dtypes: float64(2), int64(1)\n",
+      "memory usage: 252.0 bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using `info()` function to output summary information about the `DataFrame`:\n",
+    "df.info()"
    ]
   }
  ],
