Create a DataFrame using a dictionary

--- a/pandas_101.ipynb
+++ b/pandas_101.ipynb
@@ -389,6 +389,200 @@
     "# Using `info()` function to output summary information about the `DataFrame`:\n",
     "df.info()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## using a dictionary\n",
+    "\n",
+    "To create a `DataFrame` from a dictionary, let's start with a simple dictionary which will contain area data for land and water areas for the five Canadian provinces that we worked with in the previous example (i.e. Ontario, Quebec, British Columbia, Alberta and Manitoba). We will retrieve our data from a [Wikipedia page](https://en.wikipedia.org/wiki/Provinces_and_territories_of_Canada)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>province</th>\n",
+       "      <th>area_land</th>\n",
+       "      <th>area_water</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ON</td>\n",
+       "      <td>917741</td>\n",
+       "      <td>158654</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>QC</td>\n",
+       "      <td>1356128</td>\n",
+       "      <td>185928</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>BC</td>\n",
+       "      <td>925186</td>\n",
+       "      <td>19549</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AB</td>\n",
+       "      <td>642317</td>\n",
+       "      <td>19531</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>MB</td>\n",
+       "      <td>553556</td>\n",
+       "      <td>94241</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  province  area_land  area_water\n",
+       "0       ON     917741      158654\n",
+       "1       QC    1356128      185928\n",
+       "2       BC     925186       19549\n",
+       "3       AB     642317       19531\n",
+       "4       MB     553556       94241"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "area = {'province':['ON', 'QC', 'BC', 'AB', 'MB'],\n",
+    "        'area_land': [917741, 1356128, 925186, 642317, 553556],\n",
+    "        'area_water': [158654, 185928, 19549, 19531, 94241]}\n",
+    "\n",
+    "provinces_area = pd.DataFrame(area)\n",
+    "\n",
+    "provinces_area"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### set_index()\n",
+    "\n",
+    "If we want the province to be an index for this DataFrame, we need to use the method set_index():"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>province</th>\n",
+       "      <th>area_land</th>\n",
+       "      <th>area_water</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ON</td>\n",
+       "      <td>917741</td>\n",
+       "      <td>158654</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>QC</td>\n",
+       "      <td>1356128</td>\n",
+       "      <td>185928</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>BC</td>\n",
+       "      <td>925186</td>\n",
+       "      <td>19549</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AB</td>\n",
+       "      <td>642317</td>\n",
+       "      <td>19531</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>MB</td>\n",
+       "      <td>553556</td>\n",
+       "      <td>94241</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  province  area_land  area_water\n",
+       "0       ON     917741      158654\n",
+       "1       QC    1356128      185928\n",
+       "2       BC     925186       19549\n",
+       "3       AB     642317       19531\n",
+       "4       MB     553556       94241"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "provinces_area.set_index('province')\n",
+    "\n",
+    "provinces_area"
+   ]
   }
  ],
  "metadata": {
