--- a/pandas_101.ipynb
+++ b/pandas_101.ipynb
@@ -597,10 +597,265 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Canadian Provinces and Territories</th>\n",
+       "      <th>Two-Letter Abbreviation</th>\n",
+       "      <th>2016-17</th>\n",
+       "      <th>2017-18</th>\n",
+       "      <th>2018-19</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Newfoundland and Labrador</td>\n",
+       "      <td>NL</td>\n",
+       "      <td>724</td>\n",
+       "      <td>734</td>\n",
+       "      <td>750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Prince Edward Island</td>\n",
+       "      <td>PE</td>\n",
+       "      <td>584</td>\n",
+       "      <td>601</td>\n",
+       "      <td>638</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Nova Scotia</td>\n",
+       "      <td>NS</td>\n",
+       "      <td>3060</td>\n",
+       "      <td>3138</td>\n",
+       "      <td>3201</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>New Brunswick</td>\n",
+       "      <td>NB</td>\n",
+       "      <td>2741</td>\n",
+       "      <td>2814</td>\n",
+       "      <td>2956</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Quebec</td>\n",
+       "      <td>QC</td>\n",
+       "      <td>21372</td>\n",
+       "      <td>22720</td>\n",
+       "      <td>23749</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Ontario</td>\n",
+       "      <td>ON</td>\n",
+       "      <td>21347</td>\n",
+       "      <td>21101</td>\n",
+       "      <td>21420</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Manitoba</td>\n",
+       "      <td>MB</td>\n",
+       "      <td>3531</td>\n",
+       "      <td>3675</td>\n",
+       "      <td>3965</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Saskatchewan</td>\n",
+       "      <td>SK</td>\n",
+       "      <td>1565</td>\n",
+       "      <td>1613</td>\n",
+       "      <td>1673</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Alberta</td>\n",
+       "      <td>AB</td>\n",
+       "      <td>5772</td>\n",
+       "      <td>5943</td>\n",
+       "      <td>6157</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>British Columbia</td>\n",
+       "      <td>BC</td>\n",
+       "      <td>6482</td>\n",
+       "      <td>6680</td>\n",
+       "      <td>6925</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Yukon</td>\n",
+       "      <td>YT</td>\n",
+       "      <td>946</td>\n",
+       "      <td>973</td>\n",
+       "      <td>1006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Northwest Territories</td>\n",
+       "      <td>NT</td>\n",
+       "      <td>1281</td>\n",
+       "      <td>1294</td>\n",
+       "      <td>1319</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Nunavut</td>\n",
+       "      <td>NU</td>\n",
+       "      <td>1539</td>\n",
+       "      <td>1583</td>\n",
+       "      <td>1634</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Canadian Provinces and Territories Two-Letter Abbreviation  2016-17  \\\n",
+       "0           Newfoundland and Labrador                      NL      724   \n",
+       "1                Prince Edward Island                      PE      584   \n",
+       "2                         Nova Scotia                      NS     3060   \n",
+       "3                       New Brunswick                      NB     2741   \n",
+       "4                              Quebec                      QC    21372   \n",
+       "5                             Ontario                      ON    21347   \n",
+       "6                            Manitoba                      MB     3531   \n",
+       "7                        Saskatchewan                      SK     1565   \n",
+       "8                             Alberta                      AB     5772   \n",
+       "9                    British Columbia                      BC     6482   \n",
+       "10                              Yukon                      YT      946   \n",
+       "11              Northwest Territories                      NT     1281   \n",
+       "12                            Nunavut                      NU     1539   \n",
+       "\n",
+       "    2017-18  2018-19  \n",
+       "0       734      750  \n",
+       "1       601      638  \n",
+       "2      3138     3201  \n",
+       "3      2814     2956  \n",
+       "4     22720    23749  \n",
+       "5     21101    21420  \n",
+       "6      3675     3965  \n",
+       "7      1613     1673  \n",
+       "8      5943     6157  \n",
+       "9      6680     6925  \n",
+       "10      973     1006  \n",
+       "11     1294     1319  \n",
+       "12     1583     1634  "
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Reading a csv file\n",
+    "\n",
+    "# sep=, to ensure that the Python interpreter reads the data correctly:\n",
+    "prov_support = pd.read_csv('pandas_ex1.csv', sep=',')\n",
+    "\n",
+    "prov_support"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 13 entries, 0 to 12\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column                              Non-Null Count  Dtype \n",
+      "---  ------                              --------------  ----- \n",
+      " 0   Canadian Provinces and Territories  13 non-null     object\n",
+      " 1   Two-Letter Abbreviation             13 non-null     object\n",
+      " 2   2016-17                             13 non-null     int64 \n",
+      " 3   2017-18                             13 non-null     int64 \n",
+      " 4   2018-19                             13 non-null     int64 \n",
+      "dtypes: int64(3), object(2)\n",
+      "memory usage: 652.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "prov_support.info()\n",
+    "\n",
+    "# We can see that the `DataFrame` object has 5 columns of data, 3 columns are integers and 2 columns are of `object` data type. In pandas, \"object\" usually means `string`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Object data type\n",
+    "\n",
+    "We can see that the `DataFrame` object has 5 columns of data, 3 columns are integers and 2 columns are of `object` data type. In pandas, \"object\" usually means `string`.\n",
+    "We can also use the method `dtypes` to check data types for each column of data:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## dtypes\n",
+    "\n",
+    "We can also use the method `dtypes` to check data types for each column of data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Canadian Provinces and Territories    object\n",
+       "Two-Letter Abbreviation               object\n",
+       "2016-17                                int64\n",
+       "2017-18                                int64\n",
+       "2018-19                                int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prov_support.dtypes"
+   ]
   }
  ],
  "metadata": {
