Edit read_csv( ) parameters

--- a/pandas_101.ipynb
+++ b/pandas_101.ipynb
@@ -775,7 +775,7 @@
     }
    ],
    "source": [
-    "# Reading a csv file\n",
+    "# Reading a csv file/loading csv file into a DataFrame\n",
     "\n",
     "# sep=, to ensure that the Python interpreter reads the data correctly:\n",
     "prov_support = pd.read_csv('pandas_ex1.csv', sep=',')\n",
@@ -855,6 +855,179 @@
    ],
    "source": [
     "prov_support.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>province_name</th>\n",
+       "      <th>2016</th>\n",
+       "      <th>2017</th>\n",
+       "      <th>2018</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>province</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>NL</th>\n",
+       "      <td>Newfoundland and Labrador</td>\n",
+       "      <td>724</td>\n",
+       "      <td>734</td>\n",
+       "      <td>750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PE</th>\n",
+       "      <td>Prince Edward Island</td>\n",
+       "      <td>584</td>\n",
+       "      <td>601</td>\n",
+       "      <td>638</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NS</th>\n",
+       "      <td>Nova Scotia</td>\n",
+       "      <td>3060</td>\n",
+       "      <td>3138</td>\n",
+       "      <td>3201</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NB</th>\n",
+       "      <td>New Brunswick</td>\n",
+       "      <td>2741</td>\n",
+       "      <td>2814</td>\n",
+       "      <td>2956</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>QC</th>\n",
+       "      <td>Quebec</td>\n",
+       "      <td>21372</td>\n",
+       "      <td>22720</td>\n",
+       "      <td>23749</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ON</th>\n",
+       "      <td>Ontario</td>\n",
+       "      <td>21347</td>\n",
+       "      <td>21101</td>\n",
+       "      <td>21420</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MB</th>\n",
+       "      <td>Manitoba</td>\n",
+       "      <td>3531</td>\n",
+       "      <td>3675</td>\n",
+       "      <td>3965</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SK</th>\n",
+       "      <td>Saskatchewan</td>\n",
+       "      <td>1565</td>\n",
+       "      <td>1613</td>\n",
+       "      <td>1673</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AB</th>\n",
+       "      <td>Alberta</td>\n",
+       "      <td>5772</td>\n",
+       "      <td>5943</td>\n",
+       "      <td>6157</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BC</th>\n",
+       "      <td>British Columbia</td>\n",
+       "      <td>6482</td>\n",
+       "      <td>6680</td>\n",
+       "      <td>6925</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>YT</th>\n",
+       "      <td>Yukon</td>\n",
+       "      <td>946</td>\n",
+       "      <td>973</td>\n",
+       "      <td>1006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NT</th>\n",
+       "      <td>Northwest Territories</td>\n",
+       "      <td>1281</td>\n",
+       "      <td>1294</td>\n",
+       "      <td>1319</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NU</th>\n",
+       "      <td>Nunavut</td>\n",
+       "      <td>1539</td>\n",
+       "      <td>1583</td>\n",
+       "      <td>1634</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      province_name   2016   2017   2018\n",
+       "province                                                \n",
+       "NL        Newfoundland and Labrador    724    734    750\n",
+       "PE             Prince Edward Island    584    601    638\n",
+       "NS                      Nova Scotia   3060   3138   3201\n",
+       "NB                    New Brunswick   2741   2814   2956\n",
+       "QC                           Quebec  21372  22720  23749\n",
+       "ON                          Ontario  21347  21101  21420\n",
+       "MB                         Manitoba   3531   3675   3965\n",
+       "SK                     Saskatchewan   1565   1613   1673\n",
+       "AB                          Alberta   5772   5943   6157\n",
+       "BC                 British Columbia   6482   6680   6925\n",
+       "YT                            Yukon    946    973   1006\n",
+       "NT            Northwest Territories   1281   1294   1319\n",
+       "NU                          Nunavut   1539   1583   1634"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Omit header\n",
+    "# specify column names\n",
+    "# use column 'province' as index\n",
+    "\n",
+    "prov_support = pd.read_csv('pandas_ex1.csv',\n",
+    "                           sep=',',\n",
+    "                           skiprows=1,\n",
+    "                           header=None, # We are telling pandas that there is no header in the file, as we skipped  the first row\n",
+    "                           names=['province_name','province','2016','2017','2018'], # names of columns\n",
+    "                           index_col='province') \n",
+    "\n",
+    "prov_support"
    ]
   }
  ],
