--- a/pandas_101.ipynb
+++ b/pandas_101.ipynb
@@ -588,7 +588,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Loading/Saving DataFrames\n",
+    "# Loading DataFrames\n",
     "\n",
     "For this exercise, we will continue looking into the data that describes Canadian provinces. This time, we will use the data of the last 3 years of [Federal Support to all Canadian Provinces and Territories](https://www.fin.gc.ca/fedprov/mtp-eng.asp). All numbers are in millions of dollars.\n",
     "\n",
@@ -1028,6 +1028,75 @@
     "                           index_col='province') \n",
     "\n",
     "prov_support"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Saving DataFrames\n",
+    "\n",
+    "In `pandas`, we utilize the `to_csv()` function for writing out `DataFrame` data in `csv` format. It is similar to the reading function, except now the parameters are used for formatting output instead of parsing input."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'province,province_name,2016,2017,2018\\r\\nNL,Newfoundland and Labrador,724,734,750\\r\\nPE,Prince Edward Island,584,601,638\\r\\nNS,Nova Scotia,3060,3138,3201\\r\\nNB,New Brunswick,2741,2814,2956\\r\\nQC,Quebec,21372,22720,23749\\r\\nON,Ontario,21347,21101,21420\\r\\nMB,Manitoba,3531,3675,3965\\r\\nSK,Saskatchewan,1565,1613,1673\\r\\nAB,Alberta,5772,5943,6157\\r\\nBC,British Columbia,6482,6680,6925\\r\\nYT,Yukon,946,973,1006\\r\\nNT,Northwest Territories,1281,1294,1319\\r\\nNU,Nunavut,1539,1583,1634\\r\\n'"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv_out = prov_support.to_csv() # convert DataFrame to csv format\n",
+    "\n",
+    "csv_out"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## to_csv( ) part 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# writing to a file\n",
+    "prov_support.to_csv('csv_out1.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## to_csv( ) part 2\n",
+    "\n",
+    "We can also make a more elaborate call and specify if we want to include a header row and index, and what character should be used as a column separator:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prov_support.to_csv('csv_out2.csv',\n",
+    "                    sep='\\t',       # the separator used for the columns\n",
+    "                    index=True,     # whether to include indexes in output\n",
+    "                    header=True)    # whether to include headers in output"
    ]
   }
  ],
